--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robotics Projects/title>
+    <title>Robotics Projects</title>
     <style>
         body{
             background-color: #231f1f;
